examples/good/01-types.dog
int x = 5;
string y = "5";
boolean z = true;

yeet(x);
yeet(y);
yeet(z);