examples/bad/10-02-runtime-no-init.dog
yeet("runtime");
int x;
yeet("runtime");
yeet x;